# ai-daily

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily.yml
config/: preferences.yaml  sources.yaml
data/: ai_daily.db
docs/: index.html
prompts/: score.txt  summarize.txt
src/: config.py  dedup.py  llm.py  logging_setup.py  main.py  models.py  prompts.py  storage.py  summarizer.py
src/fetchers/: __init__.py  _http.py  arxiv.py  github.py  hackernews.py  rss.py
src/notifier/: labels.py  web.py
templates/: index.html.j2
tests/: conftest.py  test_config.py  test_config_stage2.py  test_dedup.py  test_llm.py  test_logging_setup.py  test_main.py  test_main_render.py  test_main_summarize.py  test_models.py  test_notifier_labels.py  test_notifier_web.py  test_prompts.py  test_storage.py  test_storage_dedup.py  test_storage_stage2.py  test_summarizer.py
tests/fixtures/: arxiv_response.xml  github_search.json  hn_search.json  llm_score_response.json  llm_score_response_dirty.txt  llm_summary_response.json  rss_feed.xml
tests/test_fetchers/: test_arxiv.py  test_github.py  test_hackernews.py  test_orchestrator.py  test_rss.py
